# Calisto

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  VPN_PROXY_SETUP.md  docker-compose.yml  proxy_server.py  pyproject.toml  run_tests.sh  start-proxy.sh
.github/: copilot-instructions.md
.github/agents/: docs.agent.md  fixer.agent.md  quality.agent.md
.streamlit/: config.toml
data/conversations/: .gitkeep
documentation/: ARCHITECTURE.md  Business Requirements Document - Callisto.md  Business Requirements Document - The Grid.md  CaseIdsCSV.csv  Implementation Plan - Callisto.md  Implementation Plan - The Grid.md  ProjectScore.md  SECURE_AI_PROMPTS.md  Technical Requirements Document - Callisto.md  UI Specification - Callisto.md
scripts/: init_weaviate.py  test_agents.py  test_api.py  test_api_quick.py  test_custom_agents.py  test_e2e_workflow.py  test_new_endpoints.py  test_prompt_security.py  validate_refactoring.py
src/: __init__.py  app.py
src/agents/: __init__.py  base.py  core.py  orchestrator.py
src/api/: __init__.py  helpers.py  main.py  models.py
src/rag/: __init__.py
src/ui/: __init__.py  main.py
src/utils/: __init__.py  config.py  logging_config.py
